Enhance API documentation for account management endpoints and update validation annotations in DTOs